roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/03-security/3.3-image-pull-secret/broken/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-3-3-svc
  labels:
    app: lab-3-3-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  selector:
    app: lab-3-3-app
  ports:
  - port: 8080
    targetPort: 8080
