roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/03-security/3.3-image-pull-secret/broken/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lab-3-3-route
  labels:
    app: lab-3-3-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  to:
    kind: Service
    name: lab-3-3-svc
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
